--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h3 id="MYCV">Click the button to Print My CV
 </h3>
 <button id="MYCVBOTTUN" onclick="window.print()">Print</button>
-<a style="font-size: 40px; " href="https://mousa85.github.io/m8" target="_blank"> The Wep project </a>
+<a style="font-size: 20px; background-color: white; " href="https://mousa85.github.io/m8" target="_blank"> The Wep project </a>
 
 
 <body id = body>
